Implement Minecraft instance launching
Added logic to launch a Minecraft instance by building the classpath from the version JAR and all library JARs using walkdir. Updated dependencies to include walkdir and added debug print statements for key paths. The function now attempts to launch Minecraft with the constructed arguments instead of returning a placeholder error.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ async-trait = "0.1"
 dirs = "5.0"
 log = "0.4"
 urlencoding = "2.1"
+walkdir = "2.3"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["sysinfoapi", "memoryapi"] }
