--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,13 @@ dirs = "6.0.0"
 log = "0.4.27"
 urlencoding = "2.1.3"
 walkdir = "2.5.0"
+oauth2 = "4.4.0"
+url = "2.4.0"
+rand = "0.8.5"
+tokio-tungstenite = "0.20.0"
+warp = "0.3.6"
+open = "5.0.0"
+lazy_static = "1.4.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }
