--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,7 +33,7 @@ oauth2 = "5.0.0"
 url = "2.5.6"
 rand = "0.9.2"
 tokio-tungstenite = "0.27.0"
-warp = "0.4.2"
+warp = { version = "0.4.2", features = ["server"] }
 open = "5.3.2"
 lazy_static = "1.5.0"
 
