--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3.31"
 bytes = "1.10.1"
 base64 = "0.22.1"
 sha1 = "0.10.6"
-zip = "4.5.0"
+zip = "2.4"
 async-trait = "0.1.89"
 dirs = "6.0.0"
 log = "0.4.27"
@@ -36,6 +36,7 @@ tokio-tungstenite = "0.27.0"
 warp = { version = "0.4.2", features = ["server"] }
 open = "5.3.2"
 lazy_static = "1.5.0"
+mcvm = "0.24.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }
