--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,7 @@ oauth2 = "4.4.2"
 warp = { version = "0.4.2", features = ["server"] }
 open = "5.3.2"
 lazy_static = "1.5.0"
-mcvm = { git = "c8f5d33e238519ab663634fd402edcae85535f60", rev = "c8f5d33e238519ab663634fd402edcae85535f60"}
+mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "c8f5d33e238519ab663634fd402edcae85535f60"}
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }
