--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ async-trait = "0.1.81"
 thiserror = "1.0.69"
 hex = "0.4.3"
 mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "c8f5d33e238519ab663634fd402edcae85535f60"}
+bollard = "0.17.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }
