--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,7 +32,8 @@ lazy_static = "1.5.0"
 async-trait = "0.1.81"
 thiserror = "1.0.69"
 hex = "0.4.3"
-mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "992f254595eafa35187c82a88bafcf28d5d7f76e"}
+mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "b6b105b0b6fa1cbc0eb205607a935c6d18d4391b"}
+#mcvm = { path = "C:\\Users\\redst\\OneDrive\\Documents\\GitHub\\chai-project\\mcvm" }
 bollard = "0.17.1"
 
 [target.'cfg(windows)'.dependencies]
