--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chailauncher",
   "private": true,
-  "version": "0.7.2",
+  "version": "0.8.0-rc1",
   "type": "module",
   "scripts": {
     "dev": "vite",
