Add mod JAR Java requirement scanner and metadata
Introduces a mod_scanner module to analyze Java version requirements from mod JARs, with new Tauri commands for scanning instances and individual mods. Updates MinecraftInstance and InstanceMetadata structs to include resolved_java_version and java_analysis_date fields, propagating these through instance creation, import, and conversion logic.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ hex = "0.4.3"
 mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "b6b105b0b6fa1cbc0eb205607a935c6d18d4391b"}
 #mcvm = { path = "C:\\Users\\redst\\OneDrive\\Documents\\GitHub\\chai-project\\mcvm" }
 bollard = "0.17.1"
+toml = "0.8.19"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }
